@@ -64,6 +64,14 @@ Default: (disabled)
 .IP
 
 .TP
+\fBIgnoreFileConfigJson=(true|false)\fR
+Ignore the existance of config.json in OCI bundle path and disable loading
+config.json if it is present.
+.sp
+Default is false.
+.IP
+
+.TP
 \fBRunTimeCreate\fR
 Pattern for OCI runtime create operation.  See the section \fBOCI Pattern\fR
 for details on pattern replacement.
